<resources>
    <string name="app_name">GPSTracker</string>
    <string name="action_settings">Settings</string>
    <string name="enable_gps_message" >Please enable your GPS.</string>
    <string name="ok" >OK</string>
    <string name="cancel" >Cancel</string>
    <string name="notification_message">Currently tracking\.\.\.</string>
    <string name="notification_title">GPS Tracking</string>
    <string name="show_tracks">Show Tracks</string>
    <string name="tracks">Tracks</string>
    <string name="locations">Locations</string>
    <string name="send_by_mail">Send by Mail</string>
    <string name="now_tracking">NOW TRACKING…</string>
    <string name="track_me">TRACK ME</string>
    <string name="lat">LAT</string>
    <string name="lng">LNG</string>
    <string name="time">TIME</string>
    <string name="ele">ELE</string>
    <string name="track">Track</string>

    <string name="action_settings_confirm">Confirm</string>
    <string name="action_settings_cancel">Cancel</string>

    <string name="activity_settings_time_between_gps">Zeit zwischen GPS-Signalen (ms)</string>
    <string name="activity_settings_amount_to_send_together">Anzahl GPS-Signale pro Request</string>
    <string name="activity_settings_explaining_time">Wie oft soll das Smartphone nach einem GPS-Signal suchen? Alles unter einer Sekunde ist wahrscheinlich unrealistisch. Empfehlung: 5000&#8211;10000 ms</string>
    <string name="activity_settings_explaining_sending">Wieviele aufgenommene GPS-Signale sollen pro Verbindung an den Server gesandt werden? Eine höhere Zahl könnte hier Mobilfunk- und Stromverbrauch verringern. Je geringer, desto \"echtzeitiger\" ist die Anwendung. Alles unter 1 ist nicht erwünscht.</string>
    <string name="activity_settings_explaining_server">Tracks an Server schicken?</string>
    <string name="activity_settings_explaining_https">HTTPS benutzen?</string>
    <string name="activity_settings_explaining_custom">Anderen Server verwenden?</string>
    <string name="activity_settings_custom_server_url">IP</string>
    <string name="activity_settings_custom_server_port">Port</string>
    <string name="activity_settings_custom_server_url_standard">52.40.140.41</string>
    <string name="activity_settings_custom_server_port_standard">443</string>
    <string name="activity_settings_delete_custom_certificates">Manuell akzeptierte Zertifikate löschen?</string>
    <string name="activity_settings_delete_custom_certificates_button">Löschen</string>
    <string name="activity_settings_toast_deleted_successfully">Manuell akzeptierte Zertifikate wurden gelöscht.</string>
    <string name="activity_settings_explaining_track_extra_information">Extra-Informationen (Akku-, Netzwerkdaten, etc.) in Datei speichern?</string>

    <string name="server_route">/v2/%1$s/send</string>

    <string name="https_failed">Es konnte keine HTTPS-Verbindung aufgebaut werden. HTTP versuchen? (Falls nein, werden die Einstellungen automatisch so geändert, dass keine Daten mehr an den Server geschickt werden.)</string>
    <string name="yes">ja</string>
    <string name="no">nein</string>
    <string name="certificate_failed_title">Zertifikat-Problem</string>
    <string name="certificate_failed">Das Zertifikat der Website konnte nicht akzeptiert werden. Manuell akzeptieren? (Falls nein, werden die Einstellungen automatisch so geändert, dass keine Daten mehr an den Server geschickt werden.) \n\n %1$s</string>
    <string name="http_request_failed_title">Verbindungsproblem</string>
    <string name="http_request_failed">Es gab ein Verbindungsproblem. Anzahl betroffener Datensätze: %1$d. Soll versucht werden, die Daten erneut zu übermitteln? Die Daten wurden bereits auf dem Smarthphone gespeichert. Folgende Fehlermeldung wurde zuletzt erhalten: \n\n %2$s</string>

    <string name="activity_main_button_jibe_start">Start Jibe</string>
    <string name="activity_main_button_jibe_middle">Middle Jibe</string>
    <string name="activity_main_button_jibe_end">End Jibe</string>
    <string name="activity_main_button_tacking_start">Start Tacking</string>
    <string name="activity_main_button_tacking_middle">Middle Tacking</string>
    <string name="activity_main_button_tacking_end">End Tacking</string>

    <string name="activity_main_toast_annotation_clicked">Annotation %1$s added</string>

    <string name="location_list_fragment_saving_success">Speichern war erfolgreich.</string>
    <string name="location_list_fragment_saving_failure">Speichern ist fehlgeschlagen.</string>
    <string name="location_list_Fragment_save_track">Track Speichern</string>
    <string name="location_list_fragment_share">Share</string>

    <string name="connection_changed">Der Netzwerkstatus hat sich geändert. Jetzt: %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <string name="extra_information_tracking_failed_title">Fehler beim Speichern der Extra-Informationen</string>

</resources>
