<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.TrackListFragment"
    tools:showIn="@layout/activity_main">

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_me"
        android:id="@+id/button_track_me"
        android:background="@drawable/rounded_button_selector"
        android:minWidth="220dp"
        android:minHeight="220dp"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:textColor="@color/colorPrimaryText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/activity_main_layout_annotations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_track_me"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/activity_main_button_jibe_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_jibe_start"/>

            <Button
                android:id="@+id/activity_main_button_jibe_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_jibe_middle"/>

            <Button
                android:id="@+id/activity_main_button_jibe_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_jibe_end"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/activity_main_button_tacking_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_tacking_start"/>

            <Button
                android:id="@+id/activity_main_button_tacking_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_tacking_middle"/>

            <Button
                android:id="@+id/activity_main_button_tacking_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onAnnotationClick"
                android:text="@string/activity_main_button_tacking_end"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_textview_latlng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
